--- a/templates/components/article-banner.njk
+++ b/templates/components/article-banner.njk
@@ -5,7 +5,7 @@
                 Před 12 dny
             </div>
             <div class="article-banner__title">
-                Jiří Štěpán z Etnetera Activate poodhalil zákulisí vykutálené náborové kampaně.
+                Jiří Štěpán z Etnetera Activate poodhalil zákulisí vykutálené náborové kampaně.
             </div>
             <a class="article-banner__link" href="/">
                 Přečíst
